# gcc-flash-test

./: .gitignore  CMakeLists.txt  main.c  readme.md  toolchain.cmake
cfg/: stm32f4-linker.ld
